[package]
name = "stm32f429-demo"
version = "0.1.0"
authors = ["Theo Hussey <husseytg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"
cortex-m-rt = "0.6.11"
ili9341 = { git = "https://github.com/flaminggoat/ili9341-rs.git", branch = "parallel_gpio" }
oorandom = "11.1.0"
embedded-hal = "0.2.3"

[dependencies.embedded-graphics]
version = "0.6.0-alpha.2"
features = ["bmp"]

[dependencies.stm32f4xx-hal]
version = "0.6.0"
features = ["stm32f429", "rt"]